# CivicPath-AI-India

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GOOGLE_SERVICES.md  LICENSE  README.md  SECURITY.md  cloudbuild.yaml  config.py  demo.py  demo_data.py  exceptions.py  google_services_registry.py  limiting.py  main.py  models.py  pyproject.toml  requirements.txt  security.py
docs/: api.md  architecture.md  deployment.md
routers/: __init__.py  chat.py  checklist.py  faq.py  health.py  journey.py  maps.py  reminders.py  translate.py
services/: __init__.py  analytics_service.py  firebase_service.py  gemini_service.py  journey_engine.py  maps_service.py  recaptcha_service.py  reminder_service.py  speech_service.py  translate_service.py
static/: app.js  chat.js  checklist.html  index.html  journey.html  manifest.json  styles.css  sw.js
tests/: __init__.py  conftest.py  test_chat_router.py  test_checklist_router.py  test_firebase_service.py  test_gemini_service.py  test_health_router.py  test_integration.py  test_journey_engine.py  test_journey_router.py  test_models.py  test_reminder_router.py  test_security.py  test_speech_service.py  test_translate_service.py
